#31[Vidhya] Fixed spacing between faces and category section in homepage

--- a/core/static/css/v2/pages/home/home-page.less
+++ b/core/static/css/v2/pages/home/home-page.less
@@ -236,6 +236,7 @@
   }
 }
 .home-article-grid-3 {
+  margin-bottom: 60px;
   .large {
     a {
       img {
